// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Format with @linter/eslint and @linter/prettier Text only 1`] = `
Object {
  "errorCount": 0,
  "messages": Array [],
  "output": "prettier:const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format with @linter/eslint and @linter/prettier text and filePath 1`] = `
Object {
  "errorCount": 0,
  "filePath": "test.js",
  "messages": Array [],
  "output": "prettier:const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format with @linter/eslint text and filePath 1`] = `
Object {
  "errorCount": 0,
  "filePath": "test.js",
  "messages": Array [],
  "output": "const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format with @linter/eslint text only 1`] = `
Object {
  "errorCount": 0,
  "messages": Array [],
  "output": "const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format with no registered linters 1`] = `[Error: No linters registered. Please install at least one linter provider package.]`;
